authorizer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorizer
  namespace: depl-id
  labels:
    app: authorizer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: authorizer
  template:
    metadata:
      labels:
        app: authorizer
    spec:
      containers:
      - name: authorizer
        image: lakhansamani/authorizer:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: authorizer-service
  namespace: depl-id
spec:
  type: LoadBalancer
  ports:
  - port: 8080
  selector:
    app: authorizer
