ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authorizer-ingress
  namespace: depl-id
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/issuer: letsencrypt-staging
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/tls-acme: "true"
spec:
  defaultBackend:
    service:
      name: authorizer-service
      port:
        number: 8080
  ingressClassName: nginx
  tls:
  - hosts:
    - depl-id.authorizer.dev
    secretName: ingress-certificate
